--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="jp.ac.kumamoto_u.abco.ownmemoapp.EditActivity"
+            android:label="@string/editactivity_title" >
+        </activity>
     </application>
 
 </manifest>
